--- a/dynamicLib/dynamicLib.vcxproj
+++ b/dynamicLib/dynamicLib.vcxproj
@@ -97,17 +97,30 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Data\Data.h" />
     <ClInclude Include="src\dynamicLib.h" />
+    <ClInclude Include="src\exceptions\Exception.h" />
+    <ClInclude Include="src\exceptions\Exceptions.h" />
+    <ClInclude Include="src\exceptions\list\CompanyNotFound.h" />
+    <ClInclude Include="src\exceptions\list\UserNotFound.h" />
     <ClInclude Include="src\macros.h" />
     <ClInclude Include="src\pch\so2pch.h" />
     <ClInclude Include="src\temp\temp.h" />
+    <ClInclude Include="src\Windows\handles\WindowsMutex.h" />
+    <ClInclude Include="src\Windows\WindowsRegistryKey.h" />
+    <ClInclude Include="src\Windows\WindowsHandle.h" />
+    <ClInclude Include="src\Windows\WindowsHandles.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\dynamicLib.cpp" />
+    <ClCompile Include="src\exceptions\list\Exceptions.cpp" />
     <ClCompile Include="src\pch\so2pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="src\temp\temp.cpp" />
+    <ClCompile Include="src\Windows\handles\WindowsMutex.cpp" />
+    <ClCompile Include="src\Windows\WindowsRegistryKey.cpp" />
+    <ClCompile Include="src\Windows\WindowsHandle.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
