--- a/bolsa/bolsa.vcxproj
+++ b/bolsa/bolsa.vcxproj
@@ -110,6 +110,8 @@
     <ClCompile Include="src\ServerData\Request\Request.cpp" />
     <ClCompile Include="src\ServerData\User\User.cpp" />
     <ClCompile Include="src\ServerData\Wallet\Wallet.cpp" />
+    <ClCompile Include="src\threads\PipeThread.cpp" />
+    <ClCompile Include="src\threads\TimerThread.cpp" />
     <ClCompile Include="src\ui\AppUI.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -145,6 +147,9 @@
     <ClInclude Include="src\ServerData\ServerData.h" />
     <ClInclude Include="src\ServerData\User\User.h" />
     <ClInclude Include="src\ServerData\Wallet\Wallet.h" />
+    <ClInclude Include="src\threads\PipeThread.h" />
+    <ClInclude Include="src\threads\Threads.h" />
+    <ClInclude Include="src\threads\TimerThread.h" />
     <ClInclude Include="src\ui\AppUI.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
