--- a/dynamicLib/dynamicLib.vcxproj.filters
+++ b/dynamicLib/dynamicLib.vcxproj.filters
@@ -26,6 +26,7 @@
     <ClInclude Include="src\Windows\handles\WindowsEvent.h" />
     <ClInclude Include="src\Windows\WindowsTimer.h" />
     <ClInclude Include="src\Data\NumberFormatter.h" />
+    <ClInclude Include="src\Data\Random.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\pch\so2pch.cpp">
@@ -42,5 +43,6 @@
     <ClCompile Include="src\Windows\handles\WindowsEvent.cpp" />
     <ClCompile Include="src\Windows\WindowsTimer.cpp" />
     <ClCompile Include="src\Data\NumberFormatter.cpp" />
+    <ClCompile Include="src\Data\Random.cpp" />
   </ItemGroup>
 </Project>
